# dotpusher

./: .SRCINFO  .gitignore  PKGBUILD  README.md  base.json  index.py  install.sh  main.py  module_imports.py  pyproject.toml  setup.py  start.py  test.py  uninstall.sh
.aur/: .SRCINFO  PKGBUILD
.aur/.git_/: COMMIT_EDITMSG  index  packed-refs
.aur/.git_/logs/refs/heads/: master
.aur/.git_/logs/refs/remotes/origin/: HEAD  master
.aur/.git_/objects/pack/: pack-3270da7a4ffd069fdc0d968728ff377343f6c83f.idx  pack-3270da7a4ffd069fdc0d968728ff377343f6c83f.pack  pack-3270da7a4ffd069fdc0d968728ff377343f6c83f.rev
.aur/.git_/refs/remotes/origin/: master
aur/: .SRCINFO
aur/dot_git/: COMMIT_EDITMSG  config  index  packed-refs
aur/dot_git/logs/refs/heads/: master
aur/dot_git/logs/refs/remotes/origin/: HEAD  master
aur/dot_git/objects/pack/: pack-c4e4ffdb02ca4dba21ccc81b942143ed78b48136.idx  pack-c4e4ffdb02ca4dba21ccc81b942143ed78b48136.pack  pack-c4e4ffdb02ca4dba21ccc81b942143ed78b48136.rev
aur/dot_git/refs/heads/: master
core/: cli.py  config.py  config_handler.py  prepare_dir.py
core/commands/: push.py  sync.py
core/paths/: handler.py  list.py
logic/: logic.py
modules/: __init__.py  colors.py  file_manager.py  git.py  json_manager.py  shell.py  stylized_text.py
